# AudioProcessing

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  WavFile.cpp  WavFile.hpp  add_delay.cpp  compile_commands.json  fill_out.cpp  plot_samples.cpp  plot_spectrum.cpp  wav_file_io.cpp  wav_file_io.hpp  wav_read_test.cpp
src/: ImpulseResponse.cpp  ImpulseResponse.hpp  WavFile.cpp  WavFile.hpp  add_reverb.cpp  audio_process_lib.cpp  audio_process_lib.hpp  bitcrush.cpp  fill_out.cpp  impulse_responses.txt  plot_samples.cpp  plot_spectrum.cpp
